--- a/index.html
+++ b/index.html
@@ -18,10 +18,13 @@
 
 <body>
 
-
+    <!-- Header -->
     <header class="jumbotron jumbotron-fluid">
         <div class="container">
             <div class="row">
+                <div class="col-4 col-sm-3 col-md-2 align-self-center">
+                    <img src="img/logo.png" class="img-fluid" href="index.html" />
+                </div>
                 <div class="col">
                     <h1>NuCamp</h1>
                     <h2>a better way to camp</h2>
@@ -30,24 +33,29 @@
         </div>
     </header>
 
+    <!-- Navbar -->
     <nav class="navbar navbar-expand-sm navbar-dark sticky-top">
         <div class="container">
+            <a class="navbar-brand"><img src="img/logo.png" height="30" width="30" /></a>
             <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#nucampNavbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="nucampNavbar">
-            <ul class="navbar-nav">
-                <li class="nav-item active"><a class="nav-link" href="#"> <i class="fa fa-home fa-lg"></i> Home</a></li>
-                <li class="nav-item"><a class="nav-link" href="aboutus.html"> <i class="fa fa-info fa-lg"></i> About</a></li>
-                <li class="nav-item"><a class="nav-link" href="#"> <i class="fa fa-list fa-lg"></i> Sites</a></li>
-                <li class="nav-item"><a class="nav-link" href="./contactus.html"> <i class="fa fa-address-card fa-lg"></i> Contact</a></li>
-            </ul>
+                <ul class="navbar-nav">
+                    <li class="nav-item active"><a class="nav-link" href="#"> <i class="fa fa-home fa-lg"></i> Home</a>
+                    </li>
+                    <li class="nav-item"><a class="nav-link" href="aboutus.html"> <i class="fa fa-info fa-lg"></i>
+                            About</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#"> <i class="fa fa-list fa-lg"></i> Sites</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./contactus.html"> <i
+                                class="fa fa-address-card fa-lg"></i> Contact</a></li>
+                </ul>
+            </div>
         </div>
-    </div>
     </nav>
 
 
-</nav>
+    </nav>
 
 
     <div class="container">
@@ -55,10 +63,18 @@
             <div class="col-sm-4 order-sm-last col-md-3">
                 <h2 class="text-sm-right">Discover & Review </h2>
             </div>
-            <div class="col"></div>
-            <h3>Our Campsites </h3>
-            <p class="d-none d-sm-block">Explore our growing database of curated campsites and leave your own reviews!
-            </p>
+            <div class="col">
+                <div class="media">
+                    <img class="d-flex mr-3 img-thumbnail" src="img/breadcrumb-trail-thumb.jpg"
+                        alt="Breadcrumb Trail" />
+                    <div class="media-body align-self-center">
+                        <h3>Our Campsites </h3>
+                        <p class="d-none d-sm-block">Explore our growing database of curated campsites and leave your
+                            own reviews!
+                        </p>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
@@ -80,14 +96,20 @@
             <h2 class="text-sm-right">Our Community Partners</h2>
         </div>
         <div class="col">
-            <h3>Bootstrap Outfitters</h3>
-            <p class="d-none d-sm-block"> Bootstrap Outtfitters supplies you with gear you need at prices you can't beat
-            </p>
+            <div class="media">
+                <img class="d-flex mr-3 img-thumbnail " src="img/bootstrap-thumb.png" alt="Bootstrap Outfitters">
+                <div class="media-body align-self-center">
+                    <h3>Bootstrap Outfitters</h3>
+                    <p class="d-none d-sm-block"> Bootstrap Outtfitters supplies you with gear you need at prices you
+                        can't beat
+                    </p>
+                </div>
+            </div>
         </div>
     </div>
     </div>
-
-    <footer>
+    <!-- Footer -->
+    <footer class="site-footer">
         <div class="container">
             <div class="row">
                 <div class="col-4 col-sm-2 offset-1">
@@ -102,14 +124,18 @@
             </div>
             <div class="col-6 col-sm-5 text-center">
                 <h5>Social</h5>
-                    <a class="btn btn-social-icon btn-instagram" href="http://instagram.com/"><i class="fa fa-instagram"></i></a>
-                    <a class="btn btn-social-icon btn-facebook" href="http://facebook.com/"><i class="fa fa-facebook"></i></a>
-                    <a class="btn btn-social-icon btn-twitter" href="http://twitter.com/"><i class="fa fa-twitter"></i></a>
-                    <a class="btn btn-social-icon btn-google" href="http://youtube.com/"><i class="fa fa-youtube"></i></a>
+                <a class="btn btn-social-icon btn-instagram" href="http://instagram.com/"><i
+                        class="fa fa-instagram"></i></a>
+                <a class="btn btn-social-icon btn-facebook" href="http://facebook.com/"><i
+                        class="fa fa-facebook"></i></a>
+                <a class="btn btn-social-icon btn-twitter" href="http://twitter.com/"><i class="fa fa-twitter"></i></a>
+                <a class="btn btn-social-icon btn-google" href="http://youtube.com/"><i class="fa fa-youtube"></i></a>
             </div>
             <div class="col-sm-4 text-center">
-                <a role="button" class="btn btn-link" href="tel:+12065551234"><i class="fa fa-phone"></i> 1-206-555-1234</a><br />
-                <a role="button" class="btn btn-link" href="mailto:campsites@nucamp.co"><i class="fa fa-envelope-o"></i> campsites@nucamp.co</a>
+                <a role="button" class="btn btn-link" href="tel:+12065551234"><i class="fa fa-phone"></i>
+                    1-206-555-1234</a><br />
+                <a role="button" class="btn btn-link" href="mailto:campsites@nucamp.co"><i class="fa fa-envelope-o"></i>
+                    campsites@nucamp.co</a>
             </div>
         </div>
         </div>
