--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster|Open+Sans" />
     <!---CSS-->
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="css/styles.css" />
 </head>
 
 <body>
@@ -29,16 +29,78 @@
                     <h1>NuCamp</h1>
                     <h2>a better way to camp</h2>
                 </div>
-                <div class="col col-md-4 col-xl-2 align-self-center">
-                    <a href="#reserveForm" role="button" class="btn btn-lg btn-info" data-toggle="tooltip"
-                        data-placement="bottom" data-html="true"
-                        title="Or call us at <br /><strong>1-206-555-1234</strong>">
-                        Reserve Campsite
-                    </a>
+                <div class="col col-md-4 col-xl-2 float-right align-self-center">
+                    <a data-target="#reserveModal" class="btn btn-primary btn-lg bg-info mt-4 mt-sm-0"
+                        data-toggle="modal" role="button"><i class="fa fa-ticket fa-lg" aria-hidden="true"></i> Reserve
+                        Campsite</a>
                 </div>
             </div>
         </div>
+        </div>
     </header>
+
+
+    <!-- New login -->
+    <div id="reserveModal" class="modal fade" role="dialog">
+        <div class="modal-dialog modal-lg" role="document">
+            <div class="modal-content">
+                <div class="modal-header bg-info">
+                    <h3 class="modal-title text-white">Reserve a Campsite </h3>
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                </div>
+                <div class="modal-body">
+                    <div class="container-fluid">
+                        <form id="reserveForm">
+                            <div class="row form-group">
+                                <label class="col-sm-6" for="numCampers">Number of campers</label>
+                                <div class="col-sm-6">
+                                    <select class="form-control" name="numCampers" id="numCampers">
+                                        <option>select..</option>
+                                        <option>1</option>
+                                        <option>2</option>
+                                        <option>3</option>
+                                        <option>4</option>
+                                        <option>5</option>
+                                        <option>6</option>
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="row form-group">
+                                <label class="col-sm-6 col-form-label" for="date">Date</label>
+                                <div class="col">
+                                    <input class="form-control" id="date" type="date" name="date"
+                                        placeholder=""></input>
+                                </div>
+                            </div>
+
+                            <div class="row form-group">
+                                <label class="col-sm-6 col-form-label">Campsite Type</label>
+                                <div class="col btn-group btn-group-toggle " data-toggle="buttons">
+                                    <label class="btn btn-success active" data-toggle="popover" data-placement="top"
+                                        data-trigger="focus" title="Rent a tent"
+                                        data-content="We provide a 100 squarefoot tent." for="siteTent">
+                                        <input type="radio" name="options" id="siteTent" autocomplete="off" checked>Tent
+                                    </label>
+                                    <label class="btn btn-primary" data-toggle="popover" data-placement="top"
+                                        data-trigger="focus" title="Rent a RV"
+                                        data-content="We provide state of the art RVs" for="siteRV">
+                                        <input type="radio" name="options" id="siteRV" autocomplete="off">RV
+                                    </label>
+                                </div>
+                            </div>
+
+                            <div class="row">
+                                <div class="col">
+                                    <button class="btn btn-secondary" type="dismiss">Cancel</button>
+                                    <button class="btn btn-primary" type="submit">Search</button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <!-- Navbar -->
     <nav class="navbar navbar-expand-sm navbar-dark sticky-top">
@@ -66,7 +128,7 @@
         </div>
     </nav>
 
-
+    <!-- login-->
     <div id="loginModal" class="modal fade" role="dialog">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
@@ -108,8 +170,9 @@
         </div>
     </div>
 
-    <div class="container">
 
+    <!-- carousel -->
+    <div class="container">
         <div class="row row-content">
             <div class="col-md-8 mx-auto">
                 <div id="homeCarousel" class="carousel slide" data-ride="carousel">
@@ -158,77 +221,85 @@
                         <span class="carousel-control-next-icon"></span>
                         <span class="sr-only">Next</span>
                     </a>
-                </div>
-            </div>
-
-
-
-            <div class="row row-content align-items-center">
-                <div class="col-sm-4 order-sm-last col-md-3">
-                    <h2 class="text-sm-right">Discover & Review </h2>
-                </div>
-                <div class="col">
-                    <div class="media">
-                        <img class="d-flex mr-3 img-thumbnail" src="img/breadcrumb-trail-thumb.jpg"
-                            alt="Breadcrumb Trail" />
-                        <div class="media-body align-self-center">
-                            <h3>Our Campsites </h3>
-                            <p class="d-none d-sm-block">Explore our growing database of curated campsites and leave
-                                your
-                                own reviews!
-                            </p>
-                        </div>
-
+                    <!-- <div class="btn-group" id="carouselButton"></div> -->
+                        <button class="btn btn-danger btn-sm" id="carouselButton">
+                            <i class="fa fa-pause"></i>
+                        </button>
+                        <!-- <button class="btn btn-danger btn-sm" id="carouselPlay">
+                            <i class="fa fa-play"></i>
+                        </button> -->
                     </div>
                 </div>
             </div>
+        </div>
 
 
-            <div class="row row-content align-items-center">
-                <div class="col col-sm-4 col-md-3">
-                    <h2>Featured Campsites </h2>
+
+        <div class="row row-content align-items-center">
+            <div class="col-sm-4 order-sm-last col-md-3">
+                <h2 class="text-sm-right">Discover & Review </h2>
+            </div>
+            <div class="col">
+                <div class="media">
+                    <img class="d-flex mr-3 img-thumbnail" src="img/breadcrumb-trail-thumb.jpg"
+                        alt="Breadcrumb Trail" />
+                    <div class="media-body align-self-center">
+                        <h3>Our Campsites </h3>
+                        <p class="d-none d-sm-block">Explore our growing database of curated campsites and leave
+                            your
+                            own reviews!
+                        </p>
+                    </div>
+
                 </div>
+            </div>
+        </div>
 
-                <div class="col">
-                    <div class="media-body">
-                        <h3>React Lake Campground</h3>
-                        <div class="media align-self-center">
-                            <p class="d-none d-sm-block">Nestled in the foothills of the Chrome Mountains, this
-                                campground
-                                on
-                                the
-                                shores
-                                of the pristine react lake. </p>
 
-                            <img class="ml-3 d-flex img-fluid img-thumbnail" src="img/react-lake-thumb.jpg"
-                                alt="react-lake" />
-                        </div>
+        <div class="row row-content align-items-center">
+            <div class="col col-sm-4 col-md-3">
+                <h2>Featured Campsites </h2>
+            </div>
+
+            <div class="col">
+                <div class="media-body">
+                    <h3>React Lake Campground</h3>
+                    <div class="media align-self-center">
+                        <p class="d-none d-sm-block">Nestled in the foothills of the Chrome Mountains, this
+                            campground
+                            on
+                            the
+                            shores
+                            of the pristine react lake. </p>
+
+                        <img class="ml-3 d-flex img-fluid img-thumbnail" src="img/react-lake-thumb.jpg"
+                            alt="react-lake" />
                     </div>
                 </div>
             </div>
+        </div>
 
 
-            <div class="row row-content align-items-center">
-                <div class="col-sm-4 order-sm-last col-md-3">
-                    <h2 class="text-sm-right">Our Community Partners</h2>
-                </div>
-                <div class="col">
-                    <div class="media">
-                        <img class="d-flex mr-3 img-thumbnail " src="img/bootstrap-thumb.png"
-                            alt="Bootstrap Outfitters">
-                        <div class="media-body align-self-center">
-                            <h3>Bootstrap Outfitters</h3>
-                            <p class="d-none d-sm-block"> Bootstrap Outtfitters supplies you with gear you need at
-                                prices
-                                you
-                                can't beat
-                            </p>
-                        </div>
+        <div class="row row-content align-items-center">
+            <div class="col-sm-4 order-sm-last col-md-3">
+                <h2 class="text-sm-right">Our Community Partners</h2>
+            </div>
+            <div class="col">
+                <div class="media">
+                    <img class="d-flex mr-3 img-thumbnail " src="img/bootstrap-thumb.png" alt="Bootstrap Outfitters">
+                    <div class="media-body align-self-center">
+                        <h3>Bootstrap Outfitters</h3>
+                        <p class="d-none d-sm-block"> Bootstrap Outtfitters supplies you with gear you need at
+                            prices
+                            you
+                            can't beat
+                        </p>
                     </div>
                 </div>
             </div>
+        </div>
 
-            <!-- form -->
+        <!-- form 
             <div class="row row-content align-items-center">
                 <div class="mx-auto col-sm-6">
                     <div class="card">
@@ -268,6 +339,10 @@
                 </div>
             </div>
         </div>
+        -->
+
+
+
         <!-- Footer -->
         <footer class="site-footer">
             <div class="container">
@@ -275,34 +350,32 @@
                     <div class="col-4 col-sm-2 offset-1">
                         <h5>Links</h5>
                         <ul class="list-unstyled">
-                            <li><a href="index.html">Home </a></li>
+                            <li><a href="index.html">Home</a></li>
                             <li><a href="aboutus.html">About</a></li>
                             <li><a href="#">Sites</a></li>
                             <li><a href="./contactus.html">Contact</a></li>
                         </ul>
                     </div>
-                </div>
-                <div class="col-6 col-sm-5 text-center">
-                    <h5>Social</h5>
-                    <a class="btn btn-social-icon btn-instagram" href="http://instagram.com/"><i
-                            class="fa fa-instagram"></i></a>
-                    <a class="btn btn-social-icon btn-facebook" href="http://facebook.com/"><i
-                            class="fa fa-facebook"></i></a>
-                    <a class="btn btn-social-icon btn-twitter" href="http://twitter.com/"><i
-                            class="fa fa-twitter"></i></a>
-                    <a class="btn btn-social-icon btn-google" href="http://youtube.com/"><i
-                            class="fa fa-youtube"></i></a>
-                </div>
-                <div class="col-sm-4 text-center">
-                    <a role="button" class="btn btn-link" href="tel:+12065551234"><i class="fa fa-phone"></i>
-                        1-206-555-1234</a><br />
-                    <a role="button" class="btn btn-link" href="mailto:campsites@nucamp.co"><i
-                            class="fa fa-envelope-o"></i>
-                        campsites@nucamp.co</a>
+                    <div class="col-6 col-sm-5 text-center">
+                        <h5>Social</h5>
+                        <a class="btn btn-social-icon btn-instagram" href="http://instagram.com/"><i
+                                class="fa fa-instagram"></i></a>
+                        <a class="btn btn-social-icon btn-facebook" href="http://facebook.com/"><i
+                                class="fa fa-facebook"></i></a>
+                        <a class="btn btn-social-icon btn-twitter" href="http://twitter.com/"><i
+                                class="fa fa-twitter"></i></a>
+                        <a class="btn btn-social-icon btn-google" href="http://youtube.com/"><i
+                                class="fa fa-youtube"></i></a>
+                    </div>
+                    <div class="col-sm-4 text-center">
+                        <a role="button" class="btn btn-link" href="tel:+12065551234"><i class="fa fa-phone"></i>
+                            1-206-555-1234</a><br />
+                        <a role="button" class="btn btn-link" href="mailto:campsites@nucamp.co"><i
+                                class="fa fa-envelope-o"></i> campsites@nucamp.co</a>
+                    </div>
                 </div>
             </div>
-    </div>
-    </footer>
+        </footer>
 
 </body>
 
@@ -311,10 +384,7 @@
 <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
 <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 
-<script>
-    $(function () {
-        $('[data-toggle="tooltip"]').tooltip()
-    })
-</script>
+<script src="js/scripts.js"> </script>
+
 
 </html>
